# rustc-bug-aug-15-20-1

./: Cargo.toml  output.txt
floatilla/: Cargo.toml
floatilla/examples/: example.rs
floatilla/src/: error.rs  impl_cmp.rs  impl_fmt.rs  impl_ops.rs  impl_real.rs  lib.rs  try_math.rs
game/: Cargo.toml  build-shaders.sh  build.sh  check.sh  run.sh
game/src/: input.rs  main.rs
game/src/graphics/: builder.rs  mod.rs
game/src/graphics/draw_blocks/: builder.rs  mod.rs  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
game/src/graphics/util/: buffer_vec.rs  mesh_diff.rs  mod.rs  pod_fields.rs  texture_array.rs  uniform.rs  vertex.rs
game/src/textures/: coal_ore.xcf  dirt.xcf  gold_ore.xcf  grass.xcf  grass_side.xcf  gravel.xcf  hellstone.xcf  ice.xcf  iron_ore.xcf  red_ore.xcf  sand.xcf  snow.xcf  stone.xcf
game/src/util/: angle.rs  axis_unit.rs  camera.rs  fps_tracker.rs  mod.rs  pool.rs
pear/: Cargo.toml
pear/examples/: example.rs
pear/src/: backtrace_util.rs  display.rs  lib.rs  pre_debug.rs
